@@ -1,7 +1,6 @@
 package jmri.configurexml;
 
 import java.io.File;
-import java.lang.reflect.InvocationTargetException;
 import java.net.URL;
 import java.util.ArrayList;
 import java.util.Collections;
@@ -23,8 +22,8 @@ import org.slf4j.LoggerFactory;
  * Provides the mechanisms for storing an entire layout configuration to XML.
  * "Layout" refers to the hardware: Specific communication systems, etc.
  *
- * @see <A HREF="package-summary.html">Package summary for details of the
- * overall structure</A>
+ * @see <a href="package-summary.html">Package summary for details of the
+ * overall structure</a>
  * @author Bob Jacobsen Copyright (c) 2002, 2008
  */
 public class ConfigXmlManager extends jmri.jmrit.XmlFile
@@ -32,29 +31,28 @@ public class ConfigXmlManager extends jmri.jmrit.XmlFile
 
     /**
      * Define the current schema version string for the layout-config schema.
-     * See the <A HREF="package-summary.html#schema">Schema versioning
+     * See the <a href="package-summary.html#schema">Schema versioning
      * discussion</a>. Also controls the stylesheet file version.
      */
-    static final public String schemaVersion = "-2-9-6";
+    static final public String schemaVersion = "-4-19-2";
 
     public ConfigXmlManager() {
     }
 
+    /** {@inheritDoc} */
     @Override
     public void registerConfig(Object o) {
         registerConfig(o, 50);
     }
 
+    /** {@inheritDoc} */
     @Override
     public void registerPref(Object o) {
         // skip if already present, leaving in original order
         if (plist.contains(o)) {
             return;
         }
-        if (log.isDebugEnabled()) {
-            confirmAdapterAvailable(o);
-        }
-
+        confirmAdapterAvailable(o);
         // and add to list
         plist.add(o);
     }
@@ -63,26 +61,28 @@ public class ConfigXmlManager extends jmri.jmrit.XmlFile
      * Common check routine to confirm an adapter is available as part of
      * registration process.
      * <p>
-     * Note: Should only be called for debugging purposes,, for example, when
+     * Note: Should only be called for debugging purposes, for example, when
      * Log4J DEBUG level is selected, to load fewer classes at startup.
      *
      * @param o object to confirm XML adapter exists for
      */
     void confirmAdapterAvailable(Object o) {
-        String adapter = adapterName(o);
-        log.debug("register {} adapter {}", o, adapter);
-        if (adapter != null) {
-            try {
-                Class.forName(adapter);
-            } catch (ClassNotFoundException | NoClassDefFoundError ex) {
-                locateClassFailed(ex, adapter, o);
+        if (log.isDebugEnabled()) {
+            String adapter = adapterName(o);
+            log.debug("register {} adapter {}", o, adapter);
+            if (adapter != null) {
+                try {
+                    Class.forName(adapter);
+                } catch (ClassNotFoundException | NoClassDefFoundError ex) {
+                    locateClassFailed(ex, adapter, o);
+                }
             }
         }
     }
 
     /**
      * Handles ConfigureXml classes that have moved to a new package or been
-     * superceded.
+     * superseded.
      *
      * @param name name of the moved or superceded ConfigureXml class
      * @return name of the ConfigureXml class in newer package or of superseding
@@ -92,16 +92,14 @@ public class ConfigXmlManager extends jmri.jmrit.XmlFile
         return InstanceManager.getDefault(ClassMigrationManager.class).getClassName(name);
     }
 
-    /**
-     * Remove the registered preference items. This is used, for example, when a
-     * GUI wants to replace the preferences with new values.
-     */
+    /** {@inheritDoc} */
     @Override
     public void removePrefItems() {
         log.debug("removePrefItems dropped {}", plist.size());
         plist.clear();
     }
 
+    /** {@inheritDoc} */
     @Override
     public Object findInstance(Class<?> c, int index) {
         List<Object> temp = new ArrayList<>(plist);
@@ -119,6 +117,7 @@ public class ConfigXmlManager extends jmri.jmrit.XmlFile
         return null;
     }
 
+    /** {@inheritDoc} */
     @Override
     public List<Object> getInstanceList(Class<?> c) {
         List<Object> result = new ArrayList<>();
@@ -136,32 +135,26 @@ public class ConfigXmlManager extends jmri.jmrit.XmlFile
         return result;
     }
 
+    /** {@inheritDoc} */
     @Override
     public void registerConfig(Object o, int x) {
         // skip if already present, leaving in original order
         if (clist.containsKey(o)) {
             return;
         }
-
-        if (log.isDebugEnabled()) {
-            confirmAdapterAvailable(o);
-        }
-
+        confirmAdapterAvailable(o);
         // and add to list
         clist.put(o, x);
     }
 
+    /** {@inheritDoc} */
     @Override
     public void registerTool(Object o) {
         // skip if already present, leaving in original order
         if (tlist.contains(o)) {
             return;
         }
-
-        if (log.isDebugEnabled()) {
-            confirmAdapterAvailable(o);
-        }
-
+        confirmAdapterAvailable(o);
         // and add to list
         tlist.add(o);
     }
@@ -178,30 +171,24 @@ public class ConfigXmlManager extends jmri.jmrit.XmlFile
         if (ulist.contains(o)) {
             return;
         }
-
-        if (log.isDebugEnabled()) {
-            confirmAdapterAvailable(o);
-        }
-
+        confirmAdapterAvailable(o);
         // and add to list
         ulist.add(o);
     }
 
+    /** {@inheritDoc} */
     @Override
     public void registerUserPrefs(Object o) {
         // skip if already present, leaving in original order
         if (uplist.contains(o)) {
             return;
         }
-
-        if (log.isDebugEnabled()) {
-            confirmAdapterAvailable(o);
-        }
-
+        confirmAdapterAvailable(o);
         // and add to list
         uplist.add(o);
     }
 
+    /** {@inheritDoc} */
     @Override
     public void deregister(Object o) {
         plist.remove(o);
@@ -213,11 +200,11 @@ public class ConfigXmlManager extends jmri.jmrit.XmlFile
         uplist.remove(o);
     }
 
-    List<Object> plist = new ArrayList<>();
+    private List<Object> plist = new ArrayList<>();
     Map<Object, Integer> clist = Collections.synchronizedMap(new LinkedHashMap<>());
-    List<Object> tlist = new ArrayList<>();
-    List<Object> ulist = new ArrayList<>();
-    List<Object> uplist = new ArrayList<>();
+    private List<Object> tlist = new ArrayList<>();
+    private List<Object> ulist = new ArrayList<>();
+    private List<Object> uplist = new ArrayList<>();
     private final List<Element> loadDeferredList = new ArrayList<>();
 
     /**
@@ -378,11 +365,7 @@ public class ConfigXmlManager extends jmri.jmrit.XmlFile
         return true;
     }
 
-    /**
-     * Writes config, tools and user to a file.
-     *
-     * @param file config file to write
-     */
+    /** {@inheritDoc} */
     @Override
     public boolean storeAll(File file) {
         boolean result = true;
@@ -406,14 +389,13 @@ public class ConfigXmlManager extends jmri.jmrit.XmlFile
         return result;
     }
 
-    /**
-     * Writes prefs to a predefined File location.
-     */
+    /** {@inheritDoc} */
     @Override
     public void storePrefs() {
         storePrefs(prefsFile);
     }
 
+    /** {@inheritDoc} */
     @Override
     public void storePrefs(File file) {
         synchronized (this) {
@@ -423,6 +405,7 @@ public class ConfigXmlManager extends jmri.jmrit.XmlFile
         }
     }
 
+    /** {@inheritDoc} */
     @Override
     public void storeUserPrefs(File file) {
         synchronized (this) {
@@ -445,11 +428,7 @@ public class ConfigXmlManager extends jmri.jmrit.XmlFile
     }
     File prefsFile;
 
-    /**
-     * Writes prefs to a file.
-     *
-     * @param file config file to write.
-     */
+    /** {@inheritDoc} */
     @Override
     public boolean storeConfig(File file) {
         boolean result = true;
@@ -464,14 +443,7 @@ public class ConfigXmlManager extends jmri.jmrit.XmlFile
         return result;
     }
 
-    /**
-     * Writes user and config info to a file.
-     * <P>
-     * Config is included here because it doesn't hurt to read it again, and the
-     * user data (typically a panel) requires it to be present first.
-     *
-     * @param file config file to write
-     */
+    /** {@inheritDoc} */
     @Override
     public boolean storeUser(File file) {
         boolean result = true;
@@ -489,6 +461,7 @@ public class ConfigXmlManager extends jmri.jmrit.XmlFile
         return result;
     }
 
+    /** {@inheritDoc} */
     @Override
     public boolean makeBackup(File file) {
         return makeBackupFile(defaultBackupDirectory, file);
@@ -517,8 +490,9 @@ public class ConfigXmlManager extends jmri.jmrit.XmlFile
         log.debug("store using {}", aName);
         XmlAdapter adapter = null;
         try {
-            adapter = (XmlAdapter) Class.forName(adapterName(object)).newInstance();
-        } catch (ClassNotFoundException | IllegalAccessException | InstantiationException ex) {
+            adapter = (XmlAdapter) Class.forName(adapterName(object)).getDeclaredConstructor().newInstance();
+        } catch (ClassNotFoundException | IllegalAccessException | InstantiationException 
+                    | NoSuchMethodException | java.lang.reflect.InvocationTargetException ex) {
             log.error("Cannot load configuration adapter for {}", object.getClass().getName(), ex);
         }
         if (adapter != null) {
@@ -556,6 +530,7 @@ public class ConfigXmlManager extends jmri.jmrit.XmlFile
         return load(fi, false);
     }
 
+    /** {@inheritDoc} */
     @Override
     public boolean load(URL url) throws JmriConfigureXmlException {
         return load(url, false);
@@ -615,17 +590,13 @@ public class ConfigXmlManager extends jmri.jmrit.XmlFile
 
     private XmlFile.Validate validate = XmlFile.Validate.CheckDtdThenSchema;
 
-    /**
-     * Default XML verification. Public to allow scripting.
-     */
+    /** {@inheritDoc} */
     @Override
     public void setValidate(XmlFile.Validate v) {
         validate = v;
     }
 
-    /**
-     * Default XML verification. Public to allow scripting.
-     */
+    /** {@inheritDoc} */
     @Override
     public XmlFile.Validate getValidate() {
         return validate;
@@ -646,9 +617,8 @@ public class ConfigXmlManager extends jmri.jmrit.XmlFile
             root = super.rootFromURL(url);
             // get the objects to load
             List<Element> items = root.getChildren();
-            for (int i = 0; i < items.size(); i++) {
+            for (Element item : items) {
                 //Put things into an ordered list
-                Element item = items.get(i);
                 Attribute a = item.getAttribute("class");
                 if (a == null) {
                     // this is an element that we're not meant to read
@@ -656,11 +626,9 @@ public class ConfigXmlManager extends jmri.jmrit.XmlFile
                     continue;
                 }
                 String adapterName = a.getValue();
-                if (log.isDebugEnabled()) {
-                    log.debug("attempt to get adapter {} for {}", adapterName, item);
-                }
+                log.debug("attempt to get adapter {} for {}", adapterName, item);
                 adapterName = currentClassName(adapterName);
-                XmlAdapter adapter = (XmlAdapter) Class.forName(adapterName).newInstance();
+                XmlAdapter adapter = (XmlAdapter) Class.forName(adapterName).getDeclaredConstructor().newInstance();
                 int order = adapter.loadOrder();
                 log.debug("add {} to load list with order id of {}", item, order);
                 loadlist.put(item, order);
@@ -669,16 +637,14 @@ public class ConfigXmlManager extends jmri.jmrit.XmlFile
             List<Map.Entry<Element, Integer>> l = new ArrayList<>(loadlist.entrySet());
             Collections.sort(l, (Map.Entry<Element, Integer> o1, Map.Entry<Element, Integer> o2) -> o1.getValue().compareTo(o2.getValue()));
 
-            for (int i = 0; i < l.size(); i++) {
-                Element item = l.get(i).getKey();
+            for (Map.Entry<Element, Integer> elementIntegerEntry : l) {
+                Element item = elementIntegerEntry.getKey();
                 String adapterName = item.getAttribute("class").getValue();
                 adapterName = currentClassName(adapterName);
-                if (log.isDebugEnabled()) {
-                    log.debug("load " + item + " via " + adapterName);
-                }
+                log.debug("load {} via {}", item, adapterName);
                 XmlAdapter adapter = null;
                 try {
-                    adapter = (XmlAdapter) Class.forName(adapterName).newInstance();
+                    adapter = (XmlAdapter) Class.forName(adapterName).getDeclaredConstructor().newInstance();
 
                     // get version info
                     // loadVersion(root, adapter);
@@ -686,14 +652,10 @@ public class ConfigXmlManager extends jmri.jmrit.XmlFile
                     if (adapter.loadDeferred() && registerDeferred) {
                         // register in the list for deferred load
                         loadDeferredList.add(item);
-                        if (log.isDebugEnabled()) {
-                            log.debug("deferred load registered for " + item + " " + adapterName);
-                        }
+                        log.debug("deferred load registered for {} {}", item, adapterName);
                     } else {
                         boolean loadStatus = adapter.load(item, item);
-                        if (log.isDebugEnabled()) {
-                            log.debug("load status for " + item + " " + adapterName + " is " + loadStatus);
-                        }
+                        log.debug("load status for {} {} is {}", item, adapterName, loadStatus);
 
                         // if any adaptor load fails, then the entire load has failed
                         if (!loadStatus) {
@@ -701,13 +663,11 @@ public class ConfigXmlManager extends jmri.jmrit.XmlFile
                         }
                     }
                 } catch (Exception e) {
-                    creationErrorEncountered(adapter, "load(" + url.getFile() + ")",
-                            "Unexpected error (Exception)", null, null, e);
+                    creationErrorEncountered(adapter, "load(" + url.getFile() + ")", "Unexpected error (Exception)", null, null, e);
 
                     result = false;  // keep going, but return false to signal problem
                 } catch (Throwable et) {
-                    creationErrorEncountered(adapter, "in load(" + url.getFile() + ")",
-                            "Unexpected error (Throwable)", null, null, et);
+                    creationErrorEncountered(adapter, "in load(" + url.getFile() + ")", "Unexpected error (Throwable)", null, null, et);
 
                     result = false;  // keep going, but return false to signal problem
                 }
@@ -739,6 +699,14 @@ public class ConfigXmlManager extends jmri.jmrit.XmlFile
             creationErrorEncountered(null, "loading from file " + url.getFile(),
                     "IllegalAccessException", null, null, e);
             result = false;
+        } catch (NoSuchMethodException e) {
+            creationErrorEncountered(null, "loading from file " + url.getFile(),
+                    "NoSuchMethodException", null, null, e);
+            result = false;
+        } catch (java.lang.reflect.InvocationTargetException e) {
+            creationErrorEncountered(null, "loading from file " + url.getFile(),
+                    "InvocationTargetException", null, null, e);
+            result = false;
         } finally {
             // no matter what, close error reporting
             handler.done();
@@ -761,25 +729,27 @@ public class ConfigXmlManager extends jmri.jmrit.XmlFile
         return result;
     }
 
+    /** {@inheritDoc} */
     @Override
     public boolean loadDeferred(File fi) {
         return this.loadDeferred(FileUtil.fileToURL(fi));
     }
 
+    /** {@inheritDoc} */
     @Override
     public boolean loadDeferred(URL url) {
         boolean result = true;
         // Now process the load-later list
-        log.debug("Start processing deferred load list (size): " + loadDeferredList.size());
+        log.debug("Start processing deferred load list (size): {}", loadDeferredList.size());
         if (!loadDeferredList.isEmpty()) {
             for (Element item : loadDeferredList) {
                 String adapterName = item.getAttribute("class").getValue();
-                log.debug("deferred load via " + adapterName);
+                log.debug("deferred load via {}", adapterName);
                 XmlAdapter adapter = null;
                 try {
-                    adapter = (XmlAdapter) Class.forName(adapterName).newInstance();
+                    adapter = (XmlAdapter) Class.forName(adapterName).getDeclaredConstructor().newInstance();
                     boolean loadStatus = adapter.load(item, item);
-                    log.debug("deferred load status for " + adapterName + " is " + loadStatus);
+                    log.debug("deferred load status for {} is {}", adapterName, loadStatus);
 
                     // if any adaptor load fails, then the entire load has failed
                     if (!loadStatus) {
@@ -796,19 +766,18 @@ public class ConfigXmlManager extends jmri.jmrit.XmlFile
                 }
             }
         }
-        log.debug("Done processing deferred load list with result: " + result);
+        log.debug("Done processing deferred load list with result: {}", result);
         return result;
     }
 
     /**
      * Find a file by looking
-     * <UL>
-     * <LI> in xml/layout/ in the preferences directory, if that exists
-     * <LI> in xml/layout/ in the application directory, if that exists
-     * <LI> in xml/ in the preferences directory, if that exists
-     * <LI> in xml/ in the application directory, if that exists
-     * <LI> at top level in the application directory
-     * <LI>
+     * <ul>
+     * <li> in xml/layout/ in the preferences directory, if that exists
+     * <li> in xml/layout/ in the application directory, if that exists
+     * <li> in xml/ in the preferences directory, if that exists
+     * <li> in xml/ in the application directory, if that exists
+     * <li> at top level in the application directory
      * </ul>
      *
      * @param f Local filename, perhaps without path information
@@ -830,7 +799,7 @@ public class ConfigXmlManager extends jmri.jmrit.XmlFile
      * @param f Name of file not located.
      */
     void locateFileFailed(String f) {
-        log.warn("Could not locate file " + f);
+        log.warn("Could not locate file {}", f);
     }
 
     /**
@@ -905,14 +874,11 @@ public class ConfigXmlManager extends jmri.jmrit.XmlFile
         }
     }
 
-    static ErrorHandler handler = new ErrorHandler();
+    private static ErrorHandler handler = new ErrorHandler();
 
     static public void setErrorHandler(ErrorHandler handler) {
         ConfigXmlManager.handler = handler;
     }
-
-    // initialize logging
-    private final static Logger log = LoggerFactory.getLogger(ConfigXmlManager.class);
 
     /**
      * @return the loadDeferredList
@@ -920,4 +886,8 @@ public class ConfigXmlManager extends jmri.jmrit.XmlFile
     protected List<Element> getLoadDeferredList() {
         return loadDeferredList;
     }
+
+    // initialize logging
+    private final static Logger log = LoggerFactory.getLogger(ConfigXmlManager.class);
+
 }
