@@ -15,6 +15,7 @@ import java.awt.event.KeyAdapter;
 import java.awt.event.KeyEvent;
 import java.awt.event.MouseEvent;
 import java.awt.event.WindowAdapter;
+import java.lang.reflect.InvocationTargetException;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.HashMap;
@@ -37,6 +38,7 @@ import javax.swing.JOptionPane;
 import javax.swing.JPanel;
 import javax.swing.JPopupMenu;
 import javax.swing.JTextField;
+import javax.swing.SwingUtilities;
 import jmri.CatalogTreeManager;
 import jmri.ConfigureManager;
 import jmri.InstanceManager;
@@ -50,6 +52,7 @@ import jmri.jmrit.display.Positionable;
 import jmri.jmrit.display.PositionablePopupUtil;
 import jmri.jmrit.display.ToolTip;
 import jmri.util.JmriJFrame;
+import jmri.util.SystemType;
 import jmri.util.swing.JmriColorChooser;
 import org.jdom2.Element;
 import org.slf4j.Logger;
@@ -226,8 +229,9 @@ public class PanelEditor extends Editor implements ItemListener {
                                 JOptionPane.ERROR_MESSAGE);
                         return;
                     }
-                    if (getTargetPanel().getTopLevelAncestor() != null) {
-                        ((JFrame) getTargetPanel().getTopLevelAncestor()).setTitle(newName);
+                    Component ancestor = getTargetPanel().getTopLevelAncestor(); // could be null
+                    if (ancestor instanceof JFrame) {
+                        ((JFrame) ancestor).setTitle(newName);
                     }
                     editor.setTitle();
                     InstanceManager.getDefault(PanelMenu.class).renameEditorPanel(editor);
@@ -627,7 +631,7 @@ public class PanelEditor extends Editor implements ItemListener {
     }
 
     /**
-     * Create popup for a Positionable object Popup items common to all
+     * Create popup for a Positionable object. Popup items common to all
      * positionable objects are done before and after the items that pertain
      * only to specific Positionable types.
      */
@@ -727,7 +731,7 @@ public class PanelEditor extends Editor implements ItemListener {
             }
             if (event.isPopupTrigger()) {
                 log.debug("mousePressed calls showPopUp");
-                if (event.isMetaDown() || event.isAltDown()) {
+                if (isMetaDown(event) || event.isAltDown()) {
                     // if requesting a popup and it might conflict with moving, delay the request to mouseReleased
                     delayedPopupTrigger = true;
                 } else {
@@ -748,7 +752,7 @@ public class PanelEditor extends Editor implements ItemListener {
             }
         } else {
             if (event.isPopupTrigger()) {
-                if (event.isMetaDown() || event.isAltDown()) {
+                if (isMetaDown(event) || event.isAltDown()) {
                     // if requesting a popup and it might conflict with moving, delay the request to mouseReleased
                     delayedPopupTrigger = true;
                 } else {
@@ -766,7 +770,7 @@ public class PanelEditor extends Editor implements ItemListener {
             }
         }
         // if ((event.isControlDown() || _selectionGroup!=null) && _currentSelection!=null){
-        if ((event.isControlDown()) || event.isMetaDown() || event.isAltDown()) {
+        if ((event.isControlDown()) || isMetaDown(event) || event.isAltDown()) {
             //Don't want to do anything, just want to catch it, so that the next two else ifs are not
             //executed
         } else if ((_currentSelection == null && _multiItemCopyGroup == null)
@@ -848,7 +852,7 @@ public class PanelEditor extends Editor implements ItemListener {
     @Override
     public void mouseDragged(MouseEvent event) {
         setToolTip(null); // ends tooltip if displayed
-        if ((event.isPopupTrigger()) || (!event.isMetaDown() && !event.isAltDown())) {
+        if ((event.isPopupTrigger()) || (!isMetaDown(event) && !event.isAltDown())) {
             if (_currentSelection != null) {
                 List<Positionable> selections = getSelectedItems(event);
                 if (selections.size() > 0) {
@@ -1135,7 +1139,7 @@ public class PanelEditor extends Editor implements ItemListener {
         }
         if (!removed) {
             _selectionGroup.add(p);
-        } else if (removed && _selectionGroup.isEmpty()) {
+        } else if (_selectionGroup.isEmpty()) {
             _selectionGroup = null;
         }
         _targetPanel.repaint();
@@ -1179,10 +1183,10 @@ public class PanelEditor extends Editor implements ItemListener {
                 className = ConfigXmlManager.adapterName(copied);
                 copied.setLocation(x, y);
                 try {
-                    adapter = (XmlAdapter) Class.forName(className).newInstance();
+                    adapter = (XmlAdapter) Class.forName(className).getDeclaredConstructor().newInstance();
                     Element el = adapter.store(copied);
                     adapter.load(el, this);
-                } catch (ClassNotFoundException | InstantiationException | IllegalAccessException
+                } catch (ClassNotFoundException | InstantiationException | IllegalAccessException | NoSuchMethodException | InvocationTargetException
                     | jmri.configurexml.JmriConfigureXmlException
                     | RuntimeException ex) {
                         log.debug(ex.getLocalizedMessage(), ex);
@@ -1302,6 +1306,19 @@ public class PanelEditor extends Editor implements ItemListener {
            }
         });
         popup.add(edit);
+    }
+
+    // The meta key was until Java 8 the right mouse button on Windows.
+    // On Java 9 on Windows 10, there is no more meta key. Note that this
+    // method is called both on mouse button events and mouse move events,
+    // and therefore "event.getButton() == MouseEvent.BUTTON3" doesn't work.
+    // event.getButton() always return 0 for MouseMoveEvent.
+    protected boolean isMetaDown(MouseEvent event) {
+        if (SystemType.isWindows() || SystemType.isLinux()) {
+            return SwingUtilities.isRightMouseButton(event);
+        } else {
+            return event.isMetaDown();
+        }
     }
 
     private final static Logger log = LoggerFactory.getLogger(PanelEditor.class);
