@@ -13,7 +13,7 @@ import org.slf4j.LoggerFactory;
 
 /**
  * Handle XML persistance of layout connections.
- * <P>
+ * <p>
  * This class is named as being the persistant form of the JmrixConfigPane
  * class, but there's no object of that form created or used. Instead, this
  * interacts forwards to a similar class in one of the protocol-specific
@@ -38,9 +38,9 @@ public class JmrixConfigPaneXml extends AbstractXmlAdapter {
         String adapter = ConfigXmlManager.adapterName(oprime);
         log.debug("forward to " + adapter);
         try {
-            XmlAdapter x = (XmlAdapter) Class.forName(adapter).newInstance();
+            XmlAdapter x = (XmlAdapter) Class.forName(adapter).getDeclaredConstructor().newInstance();
             return x.store(oprime);
-        } catch (ClassNotFoundException | IllegalAccessException | InstantiationException e) {
+        } catch (ClassNotFoundException | IllegalAccessException | InstantiationException | NoSuchMethodException | java.lang.reflect.InvocationTargetException e) {
             log.error("Exception: ", e);
             return null;
         }
