@@ -13,7 +13,7 @@ import org.slf4j.LoggerFactory;
  * Pane for user management of RPS alignment.
  *
  * @author	Bob Jacobsen Copyright (C) 2008
-  */
+ */
 public class PollDataModel extends AbstractTableModel implements MeasurementListener {
 
     static final int NAMECOL = 0;
@@ -108,7 +108,7 @@ public class PollDataModel extends AbstractTableModel implements MeasurementList
             log.warn("returning null because of missing Engine.instance()");
         }
         if (Engine.instance().getTransmitter(r) == null) {
-            log.warn("returning null because of missing Engine.instance().getTransmitter(" + r + ")");
+            log.warn("returning null because of missing Engine.instance().getTransmitter({})", r);
         }
 
         double val;
@@ -132,21 +132,21 @@ public class PollDataModel extends AbstractTableModel implements MeasurementList
                     return null;
                 }
                 val = m.getX();
-                return new Double(val);
+                return Double.valueOf(val);
             case LASTYCOL:
                 m = Engine.instance().getTransmitter(r).getLastMeasurement();
                 if (m == null) {
                     return null;
                 }
                 val = m.getY();
-                return new Double(val);
+                return Double.valueOf(val);
             case LASTZCOL:
                 m = Engine.instance().getTransmitter(r).getLastMeasurement();
                 if (m == null) {
                     return null;
                 }
                 val = m.getZ();
-                return new Double(val);
+                return Double.valueOf(val);
             case LASTTIME:
                 m = Engine.instance().getTransmitter(r).getLastMeasurement();
                 if (m == null) {
@@ -174,7 +174,7 @@ public class PollDataModel extends AbstractTableModel implements MeasurementList
                 modifiedFlag.setModifiedFlag(true);
                 return;
             case TYPECOL:
-                log.error("Got " + ((JComboBox<?>) value).getSelectedItem() + " but did not act");
+                log.error("Got {} but did not act", ((JComboBox<?>) value).getSelectedItem());
                 break;
             default:
                 log.warn("Unhandled col {}", c);
